--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.16.3",
         "nonce": "^1.0.4",
         "puppeteer": "^1.6.0",
+        "request": "^2.87.0",
         "request-promise": "^4.2.2",
         "sharp": "^0.20.4",
         "uglify-js": "^3.3.28"
